# fast-html-api

./: README.md  database.db  main.py  pyproject.toml
app/: database.py  main.py
static/: hx-state.js  signals.js
