[tool.poetry]
name = "fast-html-api"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.112.0"
python-fasthtml = ">=0.2.1"
sqlmodel = "^0.0.21"


[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "F405"]
indent-width = 2

